--- a/exercicio 7/style.css
+++ b/exercicio 7/style.css
@@ -1,3 +1,31 @@
+p{
+    overflow-wrap: break-word;
+    max-width: 90vw;
+}
 .container{
-    
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 400px;
+    z-index: 1;
+    text-align: center;
+}
+.imagem{
+    width: 90%;
+    height: 100%;
+    opacity: 0.5;
+}
+.centro{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: black;
+    z-index: 999;
+}
+.wpp{
+    position: fixed;
+    bottom: 2%;
+    right: 2%;
+    width: 5%;
 }
